--- a/main_admin.html
+++ b/main_admin.html
@@ -1,6 +1,21 @@
-<a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
+    <title>Main</title>
+    <link rel="stylesheet" href="assets/styles/styles.css">
 
-  <div class="">
+  </head>
+
+
+<body>
+    <div class="container">
+      <a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+
+
     <h2>MainAdminPage</h2>
 
       <header class="mainAdmPage">
@@ -13,32 +28,49 @@
       <ul>
 
     <div class="listItem">
-      <ul>
-        <li><input type="text" class="input-form" id="input-title" placeholder="{{}}"></li>
-        <li><input type="text" class="input-form" id="input-title" placeholder="{{}}"></li>
-      </ul>
+      <h3>
+      <form class="new-list-form" action="index.html" method="post">
+        <input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+        <input type="text" class="input-form" placeholder="{{}}"><!--- description -->
+        <input type="text" class="input-form" placeholder="{{}}"><!-- price -->
+        <a href='#/new'>
+        <button class=""><span>Price</span></button></a>
+      </form>
     </div>
 
-    <!-- <form class="new-app-form" action="index.html" method="post">
-      <input type="text" class="input-form" id="input-street" placeholder="{{appointments.street}}">
-      <i class="fa fa-map-marker fa-lg" aria-hidden="true"></i>
-    </form>
+    <div class="listItem">
+      <h3>
+      <form class="new-list-form" action="index.html" method="post">
+        <input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+        <input type="text" class="input-form" placeholder="{{}}"><!--- description -->
+        <input type="text" class="input-form" placeholder="{{}}"><!-- price -->
+        <a href='#/new'>
+        <button class=""><span>Price</span></button></a>
+      </form>
+    </div>
 
-    <h4>City, State</h4>
-    <input type="text" class="input-form" id="input-city" placeholder="{{appointments.city}}">
+    <div class="listItem">
+      <h3>
+      <form class="new-list-form" action="index.html" method="post">
+        <input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+        <input type="text" class="input-form" placeholder="{{}}"><!--- description -->
+        <input type="text" class="input-form" placeholder="{{}}"><!-- price -->
+        <a href='#/new'>
+        <button class=""><span>Price</span></button></a>
+      </form>
+    </div>
 
-    <h4>Date</h4>
-    <form class="new-app-form" action="index.html" method="post">
-      <input type="text" class="input-form" id="input-date" placeholder="{{appointments.date}}">
-      <i class="fa fa-calendar fa-lg" aria-hidden="true"></i>
-    </form>
 
-    <h4>Time</h4>
-    <form class="new-app-form" action="index.html" method="post">
-      <input type="text" class="input-form" id="input-time" placeholder="{{appointments.time}}">
-      <i class="fa fa-clock-o fa-lg" aria-hidden="true"></i>
-    </form>
     <a href='#/new'>
     <button class="delete-app"><span>Delete</span></button></a>
     <a href='#/home'>
-    <button class= "save-edit-app"><span>Save</span></button></a> -->
+    <button class= "save-edit-app"><span>Save</span></button></a>
+    </div>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
+
+    <script src="assets/js/app.js/"></script>
+    <script src="assets/js/controller.js"></script>
+    </body>
+  </html>
