Add main.html structure

--- a/main_admin.html
+++ b/main_admin.html
@@ -11,6 +11,10 @@
   </head>
 
 
+
+  
+
+
 <body>
     <div class="container">
       <a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
@@ -70,7 +74,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
 
-    <script src="assets/js/app.js/"></script>
-    <script src="assets/js/controller.js"></script>
+    <!-- <script src="assets/js/app.js/"></script> -->
+    <!-- <script src="assets/js/controller.js"></script> -->
     </body>
   </html>
