--- a/main_admin.html
+++ b/main_admin.html
@@ -12,44 +12,50 @@
 
   <body>
     <div class="container">
-      <a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+
 
 
     <h2>MainAdminPage</h2>
 
-      <header class="mainAdmPage">
+      <header class="mainAdmPage"><!-- Nav Bar -->
+      
       <ul>
-
       <button>Logo</button>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
+      <li><a href="#"></a>link</li>
+      <li><a href="#"></a>link</li>
+      <li><a href="#"></a>link</li>
       <ul>
     </header>
 
+
+<!--  IMAGE -->
     <div class="section group">
       <div class="col span_1_of_2">
       <form class="new-list-form" action="index.html" method="post">
-        <input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+        <input class="input-form">
+        <a href="#"><img src="" alt=""/></a><!-- image -->
       </form>
       </div>
 
+
+<!--    DESCRIPTION AND PRICE -->
       <div class="col span_1_of_2">
         <form class="new-list-form" action="index.html" method="post">
         <input type="text" class="input-form" placeholder="{{description}}"><!--- description -->
         <input type="text" class="input-form" placeholder="{{price}}"><!-- price -->
-        <a href='#/new'>
-        <button class=""><span>Price</span></button></a>
+        <a href='#/'>
+        <button class=""><span>Edit</span></button></a>
       </form>
     </div>
   </div>
 
 
-
+<!--   AN EXTRA ROW.  I DON'T THINK WE ARE GOING TO NEED TO HARD CODE AN ADDITIONAL ROW, THOUGH  -->
   <div class="section group">
     <div class="col span_1_of_2">
     <form class="new-list-form" action="index.html" method="post">
-      <input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+      <input class="input-form"
+        <a href="#"><img src="" alt=""/></a><!-- image -->
     </form>
     </div>
 
@@ -58,35 +64,13 @@
       <input type="text" class="input-form" placeholder="{{description}}"><!--- description -->
       <input type="text" class="input-form" placeholder="{{price}}"><!--price  -->
       <a href='#/'>
-      <button class=""><span>Price</span></button></a>
+      <button class=""><span>Edit</span></button></a>
     </form>
   </div>
 </div>
 
-    <!-- <div class="listItem">
-      <h3>
-      <form class="new-list-form" action="index.html" method="post">
-        <input class="input-form" <a href="#"><img src="" alt=""/></a>
-        <input type="text" class="input-form" placeholder="{{}}">
-        <input type="text" class="input-form" placeholder="{{}}">
-        <a href='#/new'>
-        <button class=""><span>Price</span></button></a>
-      </form>
-    </div>
 
-    <div class="listItem">
-      <h3>
-      <form class="new-list-form" action="index.html" method="post">
-        <input class="input-form" <a href="#"><img src="" alt=""/></a>
-        <input type="text" class="input-form" placeholder="{{}}">
-        <input type="text" class="input-form" placeholder="{{}}"><
-        <a href='#/new'>
-        <button class=""><span>Price</span></button></a>
-      </form>
-    </div> -->
-
-
-
+<!--   ADD ANOTHER ITEM  -->
     <a href='#/'>
     <button class= "add-new-app"><span>Add Another</span></button></a>
     </div>
