--- a/add_new.html
+++ b/add_new.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
 
-    <title>A-Product-Page</title>
+    <title>A-new-Page</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
   </head>
 
   <div class="container">
 
-    <h2>A-Product-Page</h2>
+    <h2>A-new-Page</h2>
     <!--    HEADER  -->
-          <header class="adminProductPage"><!--- Nav Bar -->
+          <header class="adminNewPage"><!--- Nav Bar -->
             <a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
             <ul>
             <button>Logo</button>
-            <li><a href="#"></a>link</li>
+            <li><a href="#"></a>link</li><!-- could be buttons -->
             <li><a href="#"></a>link</li>
             <li><a href="#"></a>link</li>
             <ul>
@@ -35,8 +35,8 @@
 
         <!--  PRICE AND DESCRIPTION -->
             <div class="col span_1_of_2">
-              <ul id="admin-product">
-                  <li class="admin-product-li">
+              <ul id="admin-new">
+                  <li class="admin-new-li">
                     <a href="#/">
                     <input type='text' class="left-side" placeholder"{{price}}"/>
                     <input type="text" class="right-side" placeholder="{{description}}"/>
@@ -44,7 +44,7 @@
                   </a>
                 </li>
 
-                <li class='product-btn'>
+                <li class='new-btn'>
                   <a href="#/">
                   <button>Save</button>
                 </a>
