--- a/admin_index.html
+++ b/admin_index.html
@@ -2,17 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 
   <title>Admin View</title>
   <link rel="stylesheet" href="assets/styles/styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
   </head>
 
   <body>
-    <div ng-app="Admin" id="admin">
+    <div ng-app="admin">
       <ng-view></ng-view>
 
   </div>
@@ -26,7 +27,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
 
-  <script src="assets/js/app.js/"></script>
+  <script src="assets/js/app.js"></script>
   <script src="assets/js/controller.js"></script>
 
 
