--- a/edit_product.html
+++ b/edit_product.html
@@ -1,6 +1,7 @@
-<html>
+<!-- <html>
   <head>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
@@ -9,16 +10,18 @@
 
   </head>
 
-  <body>
+  <body> -->
 
     <div class="container">
+
+    <div id="editpage">
 
     <h2>A-Edit-Page</h2>
 
 
 <!--    HEADER  -->
       <header class="adminEditPage"><!--- Nav Bar -->
-      <a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
+      <a href="#/mainpage" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
         <ul>
         <button>Logo</button>
         <li><a href="#"></a>link</li>
@@ -51,8 +54,8 @@
         </li>
 
         <li class='edit-btn'>
-          <a href="#/">
-          <button>Save</button>
+          <a href="#/mainpage">
+          <button class="save-item">Save</button>
         </a>
       </li>
     </ul>
@@ -67,11 +70,11 @@
 
 
 
-
+<!--
 
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
 
   </body>
-</htm>
+</htm> -->
