--- a/add_new.html
+++ b/add_new.html
@@ -1,21 +1,24 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
 
     <title>A-new-Page</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
-  </head>
+  </head> -->
 
   <div class="container">
+
+    <div id="newpage">
 
     <h2>A-new-Page</h2>
     <!--    HEADER  -->
           <header class="adminNewPage"><!--- Nav Bar -->
-            <a href="#" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
+            <a href="#/mainpage" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
             <ul>
             <button>Logo</button>
             <li><a href="#"></a>link</li><!-- could be buttons -->
@@ -45,7 +48,7 @@
                 </li>
 
                 <li class='new-btn'>
-                  <a href="#/">
+                  <a href="#/mainpage">
                   <button>Save</button>
                 </a>
               </li>
@@ -57,10 +60,10 @@
 
 
 
-
+<!--
 
 
   <body>
 
   </body>
-</html>
+</html> -->
