Add some routing

--- a/product_detail.html
+++ b/product_detail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -9,7 +9,7 @@
     <title>View Products</title>
 </head>
 
-<body>
+<body> -->
 
 <!--Nav bar-->
     <div class="topWords">
@@ -18,7 +18,7 @@
         <span class="topLinks">
       <button class = "nav"><h3>cart</h3></button>
       <button class = "nav"><h3>admin</h3></button>
-      <button class = "nav"><h3>home</h3></button>
+      <button class = "nav"><a href = "#/home"><h3>home</h3></button></a>
       <h2>buy_it</h2>
     </span>
     </div>
@@ -33,11 +33,11 @@
           </div>
 
     </div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 
-</html>
+</html> -->
