Add local storage and controller

--- a/add_new.html
+++ b/add_new.html
@@ -21,9 +21,9 @@
             <a href="#/mainpage" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
             <ul>
             <button>Logo</button>
-            <li><a href="#"></a>link</li><!-- could be buttons -->
-            <li><a href="#"></a>link</li>
-            <li><a href="#"></a>link</li>
+            <li><a href="#" ></a>Cart</li><!-- could be buttons -->
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>Buyer</li>
             <ul>
         </header>
 
@@ -31,7 +31,9 @@
             <div class="section group">
               <div class="col span_1_of_2">
               <form class="new-list-form" action="index.html" method="post">
-<!-- may not need input tag img --><input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+                <input type="input-form" id="input-image" placeholder="{{img}}"><!-- may not need input tag img -->
+                <!-- <a href="#"> -->
+                <img src="" alt=""/></a><!-- image -->
               </form>
              </div>
 
@@ -40,18 +42,18 @@
             <div class="col span_1_of_2">
               <ul id="admin-new">
                   <li class="admin-new-li">
-                    <a href="#/">
-                    <input type='text' class="left-side" placeholder"{{price}}"/>
-                    <input type="text" class="right-side" placeholder="{{description}}"/>
+                    <!-- <a href="#/"> -->
+                    <input type='input-form'  id="input-price" placeholder"{{price}}"/>
+                    <input type="input-form" id="input-description" placeholder="{{description}}"/>
                   </div>
                   </a>
                 </li>
 
-                <li class='new-btn'>
+                <!-- <li class='new-btn'> -->
                   <a href="#/mainpage">
                   <button>Save</button>
                 </a>
-              </li>
+              <!-- </li> -->
             </ul>
         </div>
 
