--- a/admin_index.html
+++ b/admin_index.html
@@ -13,9 +13,10 @@
   </head>
 
   <body>
-    <div ng-app="admin">
+    <div ng-app="admin" ng-controller="mainController">
+      <div id="admin">
       <ng-view></ng-view>
-
+    </div>
   </div>
 
 
@@ -29,6 +30,7 @@
 
   <script src="assets/js/app.js"></script>
   <script src="assets/js/controller.js"></script>
+  <script src="assets/js/local.js"></script>
 
 
 
