--- a/edit_product.html
+++ b/edit_product.html
@@ -24,9 +24,9 @@
       <a href="#/mainpage" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
         <ul>
         <button>Logo</button>
-        <li><a href="#"></a>link</li>
-        <li><a href="#"></a>link</li>
-        <li><a href="#"></a>link</li>
+        <li><a href="#"></a>Cart</li>
+        <li><a href="#"></a>Home</li>
+        <li><a href="#"></a>Buyer</li>
         <ul>
     </header>
 
@@ -37,7 +37,9 @@
     <div class="section group">
       <div class="col span_1_of_2">
       <form class="new-list-form" action="index.html" method="post">
-        <input class="input-form" <a href="#"><img src="" alt=""/></a><!-- image -->
+        <input type="input-form" id="input-image" placeholder="{{img}}">
+        <a href="#">
+        <img src="" alt=""/></a><!-- image -->
       </form>
      </div>
 
@@ -46,18 +48,18 @@
     <div class="col span_1_of_2">
       <ul id="admin-edit">
           <li class="admin-edit-li">
-            <a href="#/">
-            <input type='text' class="left-side" placeholder"{{price}}"/>
-            <input type="text" class="right-side" placeholder="{{description}}"/>
+            <!-- <a href="#/"> -->
+            <input type='input-form'  id="input-price" placeholder"{{price}}"/>
+            <input type="input-form"  id="input-description" placeholder="{{description}}"/>
           </div>
           </a>
         </li>
 
-        <li class='edit-btn'>
+        <!-- <li class='edit-btn'> -->
           <a href="#/mainpage">
           <button class="save-item">Save</button>
         </a>
-      </li>
+      <!-- </li> -->
     </ul>
 </div>
 
