--- a/product_detail.html
+++ b/product_detail.html
@@ -12,28 +12,40 @@
 <body> -->
 
 <!--Nav bar-->
-    <div class="topWords">
-        <div class="topPad">
-        </div>
-        <span class="topLinks">
-      <button class = "nav"><h3>cart</h3></button>
+<div class="topWords">
+    <div class="topPad">
+    </div>
+    <span class="topLinks">
+      <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
       <button class = "nav"><h3>admin</h3></button>
       <button class = "nav"><a href = "#/home"><h3>home</h3></button></a>
       <h2>buy_it</h2>
     </span>
-    </div>
+</div>
 
 <!--Product details-->
-    <div class="wrapper">
-      <div class="productDetail">
-        <div class ="productDetail-pic">
-          <img class="detailPic" src="assets/images/img_placeholder.gif">
-          </>
-          <div class="description">Information about the stuff goes here
+<div class="wrapper">
+    <div class="productDetail">
+        <div class="productDetail-pic">
+            <div class="confirmAlert">
+                <h3>Success!</h3>
+                <p> This item has been placed in your cart </p>
+                <div class="closeConfirm">Okay
+                </div>
+            </div>
+            <img class="detailPic" src="assets/images/img_placeholder.gif">
+            </>
+            <div class="detailDesc">Lorem ipsum dolor sit amet, lacus nulla est integer. Feugiat nisl tortor ac lacus, dolor tincidunt pretium lorem, donec posuere at aenean at pellentesque. Dis malesuada diam tortor non ullamcorper, sed vehicula sit adipisicing, varius lacinia
+                condimentum ut duis nisl diam, fusce massa mauris fames elit vitae vitae, tincidunt mattis mauris tempor.
+                <br>
+                <div class="addBtn">Add to Cart
+              </div>
+          </div>
+          <div class = "detailPrice">$15
           </div>
 
-    </div>
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
+        </div>
+        <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script>
