Add links instead of buttons in the nav bar

--- a/admin_index.html
+++ b/admin_index.html
@@ -13,9 +13,15 @@
   </head>
 
   <body>
+
+
     <div ng-app="admin" ng-controller="mainController">
       <div id="admin">
-      <ng-view></ng-view>
+
+
+      <ng-view></ng-view><!-- the portal  -->
+
+
     </div>
   </div>
 
