--- a/main_admin.html
+++ b/main_admin.html
@@ -24,12 +24,16 @@
       <ul>
       <a href="#/">
       <img src="#" id="logo"></a>
-      <li class="link"><a href="#"></a>
-      <button>Cart</button></li>
-      <li class="link"><a href="#"></a>
-      <button>Home</button></li>
-      <li class="link"><a href="#"></a>
-      <button>Buyer</button></li>
+
+      <a href="#" id="cart">
+      <li class="link">Cart</li></a>
+      <!-- <button>Cart</button></li> -->
+      <a href="#" id="buyer">
+      <li class="link"><a href="#">Buyer</li></a>
+      <!-- <button>Buyer</button></li> -->
+      <a href="#" id="home">
+      <li class="link"><a href="#">Home</li></a>
+      <!-- <button>Homer</button></li> -->
       <ul>
     </header>
 
