landing page styling

--- a/main_admin.html
+++ b/main_admin.html
@@ -23,7 +23,7 @@
 
       <ul class="header"><!-- control color-->
       <a href="#/">
-      <img src="#"></a>
+      <li><i class="fa fa-cogs" aria-hidden="true"></i><li></a>
 
 
       <li class="link"> <a href="#">Cart</li></a>
