--- a/edit_product.html
+++ b/edit_product.html
@@ -77,7 +77,7 @@
           <div class="edit-btn">
         <!-- <li class='edit-btn'> -->
           <a href="#/mainpage">
-          <button class="save-item-btn">Save</button>
+          <button ng-click="save-item" class="save-item-btn">Save</button>
         </a>
       </div>
       <!-- </li> -->
